--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hapi/boom": "^10.0.1",
+    "async-mutex": "^0.5.0",
     "awesome-phonenumber": "^7.5.0",
     "axios": "^1.12.2",
     "baileys": "7.0.0-rc.6",
@@ -45,6 +46,8 @@
     "pm2": "^6.0.13",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "util": "^0.12.5",
     "yt-search": "^2.13.1"
   },
