--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "async-mutex": "^0.5.0",
     "awesome-phonenumber": "^7.5.0",
     "axios": "^1.12.2",
-    "baileys": "7.0.0-rc.6",
+    "baileys": "latest",
     "canvas": "^3.2.0",
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
